[package]
name = "dogtunnel"
version = "0.1.0"
authors = ["vzex <vzex@163.com>"]
edition = "2018"

[features]
nowarnings = []

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"]}
kcp = "0.4.10"
igd = "0.12.0"

futures = "0.3.8" 
futures-locks = "0.6"
async-trait = "0.1.52"
